Collision/CollisionWorld.cs


			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_new([In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
		}

		public class LocalConvexResult
		{
			internal IntPtr _native;

			public LocalConvexResult(CollisionObject hitCollisionObject, LocalShapeInfo localShapeInfo, Vector3 hitNormalLocal, Vector3 hitPointLocal, float hitFraction)
			{
				_native = btCollisionWorld_LocalConvexResult_new(hitCollisionObject._native, localShapeInfo._native, ref hitNormalLocal, ref hitPointLocal, hitFraction);
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_LocalConvexResult_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~LocalConvexResult()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_LocalConvexResult_new(IntPtr hitCollisionObject, IntPtr localShapeInfo, [In] ref Vector3 hitNormalLocal, [In] ref Vector3 hitPointLocal, float hitFraction);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_LocalConvexResult_delete(IntPtr obj);
		}

		public class ConvexResultCallback
		{
			internal IntPtr _native;

			public bool NeedsCollision(BroadphaseProxy proxy0)
			{
				return btCollisionWorld_ConvexResultCallback_needsCollision(_native, proxy0._native);
			}

			public float AddSingleResult(LocalConvexResult convexResult, bool normalInWorldSpace)
			{
				return btCollisionWorld_ConvexResultCallback_addSingleResult(_native, convexResult._native, normalInWorldSpace);
			}

			public bool HasHit
			{
				get { return btCollisionWorld_ConvexResultCallback_hasHit(_native); }
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_ConvexResultCallback_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~ConvexResultCallback()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern bool btCollisionWorld_ConvexResultCallback_hasHit(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern bool btCollisionWorld_ConvexResultCallback_needsCollision(IntPtr obj, IntPtr proxy0);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btCollisionWorld_ConvexResultCallback_addSingleResult(IntPtr obj, IntPtr convexResult, bool normalInWorldSpace);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_ConvexResultCallback_delete(IntPtr obj);
		}

		public class ClosestConvexResultCallback : ConvexResultCallback
		{
			public ClosestConvexResultCallback(Vector3 convexFromWorld, Vector3 convexToWorld)
			{
				_native = btCollisionWorld_ClosestConvexResultCallback_new(ref convexFromWorld, ref convexToWorld);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_ClosestConvexResultCallback_new([In] ref Vector3 convexFromWorld, [In] ref Vector3 convexToWorld);
		}

		public class ContactResultCallback
		{
			internal IntPtr _native;

			public bool NeedsCollision(BroadphaseProxy proxy0)
			{
				return btCollisionWorld_ContactResultCallback_needsCollision(_native, proxy0._native);
			}
            /*
			public float AddSingleResult(ManifoldPoint cp, CollisionObjectWrapper colObj0Wrap, int partId0, int index0, CollisionObjectWrapper colObj1Wrap, int partId1, int index1)
			{
				return btCollisionWorld_ContactResultCallback_addSingleResult(_native, cp._native, colObj0Wrap._native, partId0, index0, colObj1Wrap._native, partId1, index1);
			}
            */
			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_ContactResultCallback_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~ContactResultCallback()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern bool btCollisionWorld_ContactResultCallback_needsCollision(IntPtr obj, IntPtr proxy0);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btCollisionWorld_ContactResultCallback_addSingleResult(IntPtr obj, IntPtr cp, IntPtr colObj0Wrap, int partId0, int index0, IntPtr colObj1Wrap, int partId1, int index1);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_ContactResultCallback_delete(IntPtr obj);
		}

		internal IntPtr _native;
        AlignedCollisionObjectArray _collisionObjectArray;

        protected CollisionConfiguration _collisionConfiguration;
        protected Dispatcher _dispatcher;
        protected BroadphaseInterface _broadphase;

        internal CollisionWorld(IntPtr native)
        {
            _native = native;
        }

		public CollisionWorld(Dispatcher dispatcher, BroadphaseInterface broadphasePairCache, CollisionConfiguration collisionConfiguration)
		{
			_native = btCollisionWorld_new(dispatcher._native, broadphasePairCache._native, collisionConfiguration._native);
            _dispatcher = dispatcher;
            _broadphase = broadphasePairCache;
            _collisionConfiguration = collisionConfiguration;
		}

		public void AddCollisionObject(CollisionObject collisionObject, short collisionFilterGroup, short collisionFilterMask)
		{
			btCollisionWorld_addCollisionObject(_native, collisionObject._native, collisionFilterGroup, collisionFilterMask);
		}

		public void AddCollisionObject(CollisionObject collisionObject, short collisionFilterGroup)
		{
			btCollisionWorld_addCollisionObject2(_native, collisionObject._native, collisionFilterGroup);
		}

		public void AddCollisionObject(CollisionObject collisionObject)
		{
			btCollisionWorld_addCollisionObject3(_native, collisionObject._native);
		}

		public void ComputeOverlappingPairs()
		{
			btCollisionWorld_computeOverlappingPairs(_native);
		}

		public void ContactPairTest(CollisionObject colObjA, CollisionObject colObjB, ContactResultCallback resultCallback)
		{
			btCollisionWorld_contactPairTest(_native, colObjA._native, colObjB._native, resultCallback._native);
		}

		public void ContactTest(CollisionObject colObj, ContactResultCallback resultCallback)
		{
			btCollisionWorld_contactTest(_native, colObj._native, resultCallback._native);
		}

        public void ConvexSweepTest(ConvexShape castShape, Matrix from, Matrix to, ConvexResultCallback resultCallback, float allowedCcdPenetration)
		{
			btCollisionWorld_convexSweepTest(_native, castShape._native, ref from, ref to, resultCallback._native, allowedCcdPenetration);
		}

        public void ConvexSweepTest(ConvexShape castShape, Matrix from, Matrix to, ConvexResultCallback resultCallback)
		{
            btCollisionWorld_convexSweepTest2(_native, castShape._native, ref from, ref to, resultCallback._native);
		}

		public void DebugDrawObject(Matrix worldTransform, CollisionShape shape, Vector3 color)
		{
			btCollisionWorld_debugDrawObject(_native, ref worldTransform, shape._native, ref color);
		}

		public void DebugDrawWorld()
		{
			btCollisionWorld_debugDrawWorld(_native);
		}

        public void ObjectQuerySingle(ConvexShape castShape, Matrix rayFromTrans, Matrix rayToTrans, CollisionObject collisionObject, CollisionShape collisionShape, Matrix colObjWorldTransform, ConvexResultCallback resultCallback, float allowedPenetration)
		{
			btCollisionWorld_objectQuerySingle(castShape._native, ref rayFromTrans, ref rayToTrans, collisionObject._native, collisionShape._native, ref colObjWorldTransform, resultCallback._native, allowedPenetration);
		}
        /*
        public void ObjectQuerySingleInternal(ConvexShape castShape, Matrix convexFromTrans, Matrix convexToTrans, CollisionObjectWrapper colObjWrap, ConvexResultCallback resultCallback, float allowedPenetration)
		{
			btCollisionWorld_objectQuerySingleInternal(castShape._native, ref convexFromTrans, ref convexToTrans, colObjWrap._native, resultCallback._native, allowedPenetration);
		}
        */
		public void PerformDiscreteCollisionDetection()
		{
			btCollisionWorld_performDiscreteCollisionDetection(_native);
		}

        public void RayTest(ref Vector3 rayFromWorld, ref Vector3 rayToWorld, RayResultCallback resultCallback)
		{
			btCollisionWorld_rayTest(_native, ref rayFromWorld, ref rayToWorld, resultCallback._native);
		}

		public void RayTestSingle(Matrix rayFromTrans, Matrix rayToTrans, CollisionObject collisionObject, CollisionShape collisionShape, Matrix colObjWorldTransform, RayResultCallback resultCallback)
		{
			btCollisionWorld_rayTestSingle(ref rayFromTrans, ref rayToTrans, collisionObject._native, collisionShape._native, ref colObjWorldTransform, resultCallback._native);
		}
        /*
		public void RayTestSingleInternal(Transform rayFromTrans, Transform rayToTrans, CollisionObjectWrapper collisionObjectWrap, RayResultCallback resultCallback)
		{
			btCollisionWorld_rayTestSingleInternal(rayFromTrans._native, rayToTrans._native, collisionObjectWrap._native, resultCallback._native);
		}
        */
		public void RemoveCollisionObject(CollisionObject collisionObject)
		{
			btCollisionWorld_removeCollisionObject(_native, collisionObject._native);
		}
        /*
		public void Serialize(Serializer serializer)
		{
			btCollisionWorld_serialize(_native, serializer._native);
		}
        */
		public void UpdateAabbs()
		{
			btCollisionWorld_updateAabbs(_native);
		}

		public void UpdateSingleAabb(CollisionObject colObj)
		{
			btCollisionWorld_updateSingleAabb(_native, colObj._native);
		}

		public BroadphaseInterface Broadphase
		{
            get { return _broadphase; }
			set { btCollisionWorld_setBroadphase(_native, value._native); }
		}

        public AlignedCollisionObjectArray CollisionObjectArray
        {
            get
            {
                if (_collisionObjectArray == null)
                {
                    _collisionObjectArray = new AlignedCollisionObjectArray(btCollisionWorld_getCollisionObjectArray(_native));
                }
                return _collisionObjectArray;
            }
        }

		public IDebugDraw DebugDrawer
		{
            get { return null; }
			//set { btCollisionWorld_setDebugDrawer(_native, value._native); }
            set { }
		}

        public Dispatcher Dispatcher
        {
            get { return _dispatcher; }
        }

		public DispatcherInfo DispatchInfo
		{
            get { return new DispatcherInfo(btCollisionWorld_getDispatchInfo(_native)); }
		}

		public bool ForceUpdateAllAabbs
		{
			get { return btCollisionWorld_getForceUpdateAllAabbs(_native); }
			set { btCollisionWorld_setForceUpdateAllAabbs(_native, value); }
		}

		public int NumCollisionObjects
		{
			get { return btCollisionWorld_getNumCollisionObjects(_native); }
		}

		public OverlappingPairCache PairCache
		{
            get { return new OverlappingPairCache(btCollisionWorld_getPairCache(_native)); }
		}
